<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="@dimen/spacing_medium"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/gradient">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/bt_close"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:tint="@color/grey_20"
                android:src="@drawable/ic_close" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-40dp"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:orientation="vertical"
                android:theme="@style/ThemeOverlay.AppCompat.Dark">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:fontFamily="@font/myfont"
                    android:text="@string/game_difficulty"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/White"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>


        <Button
            android:id="@+id/bt_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:layout_margin="2dp"
            android:background="@drawable/gradient"
            android:text="@string/game_difficulty_random"
            android:textColor="@color/amber_400"
            app:fontFamily="@font/myfont" />

        <Button
            android:id="@+id/bt_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:layout_margin="2dp"
            android:background="@drawable/gradient"
            android:text="@string/game_difficulty_easy"
            android:textColor="@color/amber_400"
            app:fontFamily="@font/myfont" />

        <Button
            android:id="@+id/bt_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:layout_margin="2dp"
            android:background="@drawable/gradient"
            android:text="@string/game_difficulty_medium"
            android:textColor="@color/amber_400"
            app:fontFamily="@font/myfont" />

        <Button
            android:id="@+id/bt_hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:layout_margin="2dp"
            android:text="@string/game_difficulty_hard"
            android:background="@drawable/gradient"
            android:textColor="@color/amber_400"
            app:fontFamily="@font/myfont" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_middle" />

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/bt_cancel"
            style="@style/RippleStyleWhite"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_xxlarge"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cancel"
                android:fontFamily="@font/myfont"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@android:color/white" />

        </com.balysv.materialripple.MaterialRippleLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>