<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AchievementsActivity"
    android:background="@drawable/gradient">

    <include layout="@layout/action_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_large"
            android:gravity="center"
            tools:ignore="UselessParent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_timer_achievement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="@dimen/spacing_medium"
                app:cardElevation="3dp"
                android:alpha="0.5"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/spacing_xlarge"
                    android:paddingEnd="@dimen/spacing_xlarge"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:paddingBottom="@dimen/spacing_large"
                    android:gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/timer_3d"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/achievements_timer"
                        android:textSize="12sp"
                        android:textAlignment="center"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/blue_grey_900"
                        android:gravity="center"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_score_5_achievement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="@dimen/spacing_medium"
                app:cardElevation="3dp"
                android:alpha="0.5"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/spacing_xlarge"
                    android:paddingEnd="@dimen/spacing_xlarge"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:paddingBottom="@dimen/spacing_large"
                    android:gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/rocket_3d"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/achievements_score_5"
                        android:textSize="12sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp"
                        android:textColor="@color/blue_grey_900"
                        android:gravity="center"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_large"
            android:gravity="center"
            tools:ignore="UselessParent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_score_10_achievement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="@dimen/spacing_medium"
                app:cardElevation="3dp"
                android:alpha="0.5"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/spacing_xlarge"
                    android:paddingEnd="@dimen/spacing_xlarge"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:paddingBottom="@dimen/spacing_large"
                    android:gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/star_3d"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/achievements_score_10"
                        android:textSize="12sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp"
                        android:textColor="@color/blue_grey_900"
                        android:gravity="center"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_score_50_achievement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="@dimen/spacing_medium"
                app:cardElevation="3dp"
                android:alpha="0.5"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/spacing_xlarge"
                    android:paddingEnd="@dimen/spacing_xlarge"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:paddingBottom="@dimen/spacing_large"
                    android:gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/medal_3d"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/achievements_score_50"
                        android:textSize="12sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp"
                        android:textColor="@color/blue_grey_900"
                        android:gravity="center"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>